<resources>
    <string name="app_name">Roomie</string>
    <string name="launch_name">roomie.</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="privacy_policy">By tapping \"Create account\" or\" Sign in\", you agree to our Terms. Learn how we process your data in our Privacy Policy and Cookies Policy.</string>
    <string name="trouble_signing_in">Trouble signing in?</string>
    <string name="continue_txt">CONTINUE</string>
    <string name="did_not_receive_code">Didn\'t receive the code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_verification_code_sent_to">Enter verification code sent to</string>
    <string name="verification_code">Verification code</string>
    <string name="what_is_your_email">What\'s your email?</string>
    <string name="don_t_lose_access_to_your_account_verify_your_email">Don\'t lose access to your account, verify your email.</string>
    <string name="enter_email">Enter email</string>
    <string name="my_number_is">My number is</string>
    <string name="ke_254">KE +254</string>
    <string name="_712345678">712345678</string>
    <string name="we_will_send_a_text_with_a_verification_code_message_and_data_rates_may_apply">We will send a text with a verification code. Message and data rates may apply.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="complete_your_profile">Complete your profile.</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="this_is_how_it_will_appear_in_roomie_and_you_n_will_not_be_able_to_change_it">This is how it will appear in Roomie, and you will not be able to change it.</string>
    <string name="last_name">Last Name</string>
    <string name="your_age_will_be_public">Your age will be public.</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="this_is_me">This is me</string>
    <string name="personality_string">Let everyone know who you are by adding \nit to your profile</string>
    <string name="student">Student</string>
    <string name="early_bird">Early Bird</string>
    <string name="night_owl">Night Owl</string>
    <string name="sports">Sports</string>
    <string name="gym_rat">Gym Rat</string>
    <string name="pets">Pets</string>
    <string name="full_time_worker">Full-time worker</string>
    <string name="going_out">Going out</string>
    <string name="gamer">Gamer</string>
    <string name="clean">Clean</string>
    <string name="organized">Organized</string>
    <string name="handyman">Handyman</string>
    <string name="non_smoker">Non-smoker</string>
    <string name="foodie">Foodie</string>
    <string name="musician">Musician</string>
    <string name="creative">Creative</string>
    <string name="introvert">Introvert</string>
    <string name="extrovert">Extrovert</string>
    <string name="finish">FINISH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_listings_found_image">No listings found image</string>
    <string name="no_listings_found">No listings found</string>
    <string name="add_a_listing">Add a listing</string>
    <string name="title_activity_add_listing">AddListingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n

    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>