<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:fitsSystemWindows="true"
    tools:context=".CompleteProfileActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/this_is_me"
        android:textColor="?attr/textAppearanceHeadline1"
        android:textSize="27sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/personality_string"
        android:textColor="?attr/textAppearanceBody2"
        android:textSize="19sp" />

    <com.google.android.material.chip.ChipGroup
        android:layout_marginTop="10dp"
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:chipSpacingHorizontal="10dp"
        app:chipSpacingVertical="5dp"

        >

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"
            />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/early_bird"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"
            />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_owl"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gym_rat"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pets"
            app:chipCornerRadius="50dp"
            app:chipEndPadding="10dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_time_worker"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/going_out"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamer"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organized"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/handyman"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non_smoker"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodie"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musician"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creative"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introvert"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extrovert"
            app:chipCornerRadius="50dp"
            app:chipMinHeight="40dp"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:chipSurfaceColor="@color/transparent"
            android:textColor="?attr/colorPrimary"
            style="@style/Widget.Material3.Chip.Filter"/>


    </com.google.android.material.chip.ChipGroup>

    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/continueButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/disabled_button_background"
        android:text="@string/continue_txt"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />




</LinearLayout>