<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/my_green"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:src="@drawable/roomie_white"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:text="@string/privacy_policy"
            android:textAlignment="center"
            android:textColor="@color/white"
        />

        <Button
            android:id="@+id/CreateAccountBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_change"
            android:text="@string/create_account"
            android:textColor="@drawable/button_textcolor_change"
            android:textSize="21sp"
        />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_change"
            android:text="@string/sign_in"
            android:textColor="@drawable/button_textcolor_change"
            android:textSize="21sp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/trouble_signing_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
        />

    </LinearLayout>

</RelativeLayout>
