<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:fitsSystemWindows="true"
    tools:context=".VerifyEmailActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="40dp"
            android:text="@string/what_is_your_email"
            android:textColor="@color/black"
            android:textSize="33sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="50dp"
            android:text="@string/don_t_lose_access_to_your_account_verify_your_email"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_marginTop="-40dp"
            android:layout_marginStart="-5dp"
            />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="40dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-10dp"
                android:background="@color/transparent"
                android:hint="@string/enter_email"
                android:textColorHint="@color/dark_grey"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="25sp"
                />
        </LinearLayout>

        <View
            android:layout_width="256dp"
            android:layout_height="2dp"
            android:layout_marginStart="50sp"
            android:background="@color/light_grey"/>

        <Button
            android:id="@+id/VerifyEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:background="@drawable/disabled_button_background"
            android:text="@string/continue_txt"
            android:textColor="@color/white"
            android:textSize="21sp"
            />

    </LinearLayout>
</ScrollView>