<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:fitsSystemWindows="true"
    tools:context=".SendOTPActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="40dp"
            android:text="@string/my_number_is"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/ke_254"
                android:textColor="@color/black"
                android:textSize="25sp"
                />

            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:background="@color/transparent"
                android:hint="@string/_712345678"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="9"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="40sp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="270sp"
            android:background="@color/light_grey" />

        <!-- Changed width to 130dp so it fits a kenyan number perfectly, match_parent too big-->
            <View
                android:layout_width="130dp"
                android:layout_height="2dp"
                android:layout_marginStart="160sp"
                android:layout_marginTop="-2.4dp"
                android:layout_marginEnd="95sp"
                android:background="@color/light_grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/we_will_send_a_text_with_a_verification_code_message_and_data_rates_may_apply"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_marginTop="30dp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/SendOtp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/disabled_button_background"
                android:text="@string/continue_txt"
                android:textColor="@color/white"
                android:textSize="21sp" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_marginTop="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </FrameLayout>


    </LinearLayout>
</ScrollView>