<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandlordHome">


    <FrameLayout
        android:id="@+id/not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:src="@drawable/not_found"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/no_listings_found_image"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/no_listings_found"
            android:textColor="?attr/textAppearanceBody2"
            android:textSize="20sp"
            />
    </FrameLayout>

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_margin="8dp"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            style="?attr/materialCardViewOutlinedStyle"-->
<!--            >-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical">-->

<!--                <ImageView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="200dp"-->
<!--                    android:src="@drawable/test"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    />-->




<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="bottom|center"-->
<!--                    android:text="No listings found"-->
<!--                    android:textColor="?attr/textAppearanceBody2"-->
<!--                    android:background="@color/transparent"-->
<!--                    android:textSize="20dp"-->
<!--                    />-->
<!--            </LinearLayout>-->

<!--        </com.google.android.material.card.MaterialCardView>-->


<!--    </ScrollView>-->

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_listing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/add_a_listing"
        app:icon="@drawable/ic_baseline_add_24"
        style="@style/Widget.App.ExtendedFloatingActionButton"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>